@@ -1,4 +1,4 @@
-From 26877b7fc00588600eb30d00f5973c3834694902 Mon Sep 17 00:00:00 2001
+From 050e56a0761938b1c701e3af499a42a9b0e21483 Mon Sep 17 00:00:00 2001
 From: Gerrit Pape <pape@smarden.org>
 Date: Mon, 21 Jan 2008 14:41:12 +0000
 Subject: [PATCH] bug#438793: git-sh-setup.sh, builtin-tag.c: fallback to 'editor' not 'vi'
