@@ -121,3 +121,4 @@ v1.5.4-rc2
 v1.5.4-rc3
 v1.5.4-rc4
 v1.5.4-rc5
+v1.5.4
