@@ -1,8 +1,9 @@
 git-core (1:1.5.4-1) unstable; urgency=low
 
   * merge branch debian-experimental.
+  * new upstream release.
 
- -- Gerrit Pape <pape@smarden.org>  Sun, 03 Feb 2008 04:08:49 +0000
+ -- Gerrit Pape <pape@smarden.org>  Sun, 03 Feb 2008 04:25:01 +0000
 
 git-core (1:1.5.4~rc5-1) experimental; urgency=low
 
